<resources>
    <string name="app_name">AdditionalTask1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bubble_sort_name">Пузырьковая Сортировка</string>
    <string name="insertion_sort_name">Сортировка вставками</string>
    <string name="selection_sort_name">Сортировка выбором</string>
    <string name="quick_sort_name">Быстрая сортировка</string>
    <string name="thread">Через Thread?</string>
    <string name="standart_sort_name">Стандартный алгоритм сортировки</string>
    <string name="array_name">Array</string>
    <string name="arraylist_name">ArrayList</string>
    <string name="linkedlist_name">LinkedList</string>
    <string name="fastest_algorithm_name">Найти самый быстрый алгоритм</string>
    <string name="shuffle_array">Перемешать исходный массив</string>
    <string name="original_array">Оригинальный массив</string>
    <string name="size">Размер</string>
    <string name="algorithm">Алгоритм</string>
    <string name="time">Время</string>
    <string name="count_elem">Введите кол-во элементов</string>
    <string name="chose_struct">Выберите структуру данных</string>
</resources>